tests/scope/good/out_sub_scope.catala_en

```catala
declaration scope A:
  input i content integer
  output o content integer
  input output io content integer

declaration scope B:
  output a scope A
  output b content integer

scope A:
  definition o equals i

scope B:
  definition a.i equals 99
  definition a.io equals 100
  definition b equals a.o
```


```catala-test-inline
$ catala test-scope B
[ERROR]
"a": unknown identifier for a local, scope-wide or global variable

┌─⯈ tests/scope/good/out_sub_scope.catala_en:18.23-18.24:
└──┐
18 │   definition b equals a.o
   │                       ‾
#return code 123#
```
